Hopefully final version of kelp plots.

--- a/cagesort.ipynb
+++ b/cagesort.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:559085c6b1d8c3a15a8d5ac5152d1f2816e838ef25db37965d4432ca6b2c4f17"
+  "signature": "sha256:11f64eef2212225fa89c3e128534e051a1ab0b44c3c50999a3711cc4f4236ac3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -48,7 +48,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 64
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -69,94 +69,18 @@
        "stream": "stdout",
        "text": [
         "done load\n",
-        "done sort\n"
+        "done sort"
        ]
-      }
-     ],
-     "prompt_number": 58
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "cageone=np.empty([1000,])\n",
-      "cageonem=np.empty([1000,])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for i in cages:\n",
-      "    data['nbe'][i,:]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "v=data['nbe'][cages[0],:]\n",
-      "print np.vectorize(lambda x: x in v)(cages)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
+      },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[False False  True  True False False False False False False False False\n",
-        " False False False False False]\n"
+        "\n"
        ]
       }
      ],
-     "prompt_number": 13
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "cage1=np.array([cages[0]])\n",
-      "clen=1\n",
-      "cnt=0\n",
-      "while (cnt<clen):\n",
-      "    #print cage1\n",
-      "    v=data['nbe'][cage1[cnt],:]\n",
-      "    cage1=np.append(cage1,cages[np.vectorize(lambda x: x in v)(cages)])\n",
-      "    idx=np.unique(cage1,return_index=True)[1]\n",
-      "    #print idx\n",
-      "    cage1=cage1[np.sort(idx)]\n",
-      "    cnt+=1\n",
-      "    clen=cage1.shape[0]    \n",
-      "    #print 'cnt:'+ (\"%d\"%cnt)\n",
-      "    #print clen\n",
-      "    \n",
-      "print cage1    \n",
-      "    \n",
-      "    \n",
-      "    "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[19555 19557 19558 20284 19556 20285 20283 20282 19550 20281 19549 19548\n",
-        " 18864 19547 18863 19546]\n"
-       ]
-      }
-     ],
-     "prompt_number": 46
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -182,7 +106,7 @@
       "        #print clen\n",
       "\n",
       "    print 'cagecnt:' +(\"%d\"%cagecnt)\n",
-      "    print cage1  \n",
+      "    #print cage1  \n",
       "    sortedcages[cagecnt,0:len(cage1)]=cage1\n",
       "    cagecnt+=1\n",
       "    #print np.vectorize(lambda x: x in cage1)(cagesleft)\n",
@@ -200,8 +124,6 @@
        "stream": "stdout",
        "text": [
         "cagecnt:0\n",
-        "[6827 6829 6830 6969 6832 6971 6972 6833 6973 7089 7092 6834 6974 7091 7094\n",
-        " 6835 6975 7093 7209 7095 6976 7096 7208 7210 7097 7211 7212]\n",
         "cagecnt:1"
        ]
       },
@@ -210,10 +132,6 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "[8472 8474 8476 8658 8475 8660 8657 8661 8478 8662 8659 8876 8878 8477 8664\n",
-        " 8875 8879 8877 8880 8481 8663 9103 9105 9107 8882 8666 9106 9108 9109 8881\n",
-        " 8667 9345 9347 9110 8884 8883 9349 9111 9348 8885 9612 9113 9350 9112 9614\n",
-        " 9114 9351 9615 9116 9352 9353 9616 9355 9354 9356 9617]\n",
         "cagecnt:2"
        ]
       },
@@ -222,11 +140,6 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "[ 9385  9387  9657  9654  9391  9656  9653  9655  9389  9658  9651  9932\n",
-        "  9935  9659  9937  9652  9933  9934  9936  9660  9938  9931 10219 10221\n",
-        " 10223  9662  9939 10225 10220 10222 10224  9661  9940 10226 10545 10547\n",
-        " 10550  9663  9941 10228 10548 10546 10549 10552  9942 10227 10551 10912\n",
-        " 10913 10229 10554 10915 10553 10914 10555 10916]\n",
         "cagecnt:3"
        ]
       },
@@ -235,12 +148,6 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "[13783 13784 14328 13785 14331 14332 13787 14330 14333 14876 13788 14879\n",
-        " 14334 14877 14878 13789 14880 14335 14881 15439 15441 14336 15443 14883\n",
-        " 14882 15440 15442 15444 14886 15989 15991 15447 15992 15990 15993 15445\n",
-        " 16554 15996 15995 16553 16556 15994 17118 16559 16558 17117 17121 16557\n",
-        " 17122 16560 17692 17693 17124 17123 17126 17691 17694 17125 17127 18270\n",
-        " 17696 17695 17699 18269 18271 17697 17698 18889 18272 18273 18890]\n",
         "cagecnt:4"
        ]
       },
@@ -249,12 +156,6 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "[15910 16459 16460 16470 16461 17028 17026 17023 17027 17029 17041 17024\n",
-        " 17606 17599 17604 17025 17601 17605 17607 17600 17596 17602 18189 18183\n",
-        " 18184 17597 17603 18185 18190 18191 17623 18182 18186 17624 18188 18187\n",
-        " 18807 17625 18205 18808 18810 18206 18809 18811 19495 18831 19496 19494\n",
-        " 19498 19497 19499 20225 20227 19519 20228 20224 20226 20230 20229 20231\n",
-        " 21017 21019 21020 21018 21022 21023]\n",
         "cagecnt:5"
        ]
       },
@@ -263,24 +164,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "[16541 16544 17105 17107 17109 17106 17679 17682 17104 17678 17680 17683\n",
-        " 17681 17684 17102 17677 18254 18255 18258 17687 17100 17676 18253 18256\n",
-        " 18259 18257 17688 17099 17675 18252 18871 18872 18261 18260 17101 17673\n",
-        " 18250 18870 18873 18874 18263 17097 17672 18249 18869 19554 18875 18264\n",
-        " 18876 17098 17674 18251 18868 19553 19555 18877 18878 17096 17671 18248\n",
-        " 18866 18867 19552 19557 18879 18881 19556 17095 17670 18247 18245 18865\n",
-        " 19551 20284 19558 19559 19562 19560 17093 17669 18246 18244 18864 19550\n",
-        " 20283 20285 19561 19563 20286 17092 17668 17666 18243 18862 18863 19549\n",
-        " 20282 20289 17091 17667 17665 17664 18242 18861 19546 19548 20281 20280\n",
-        " 17090 17089 17088 18860 19545 19547 20279 18859 19544 20278 18858 19543\n",
-        " 20277 19542 20276 20275]\n",
         "cagecnt:6\n",
-        "[17079 17080 17654 17656 17653 17657 17655 17652 18232 18234 17646 18228\n",
-        " 18235 18233 17645 18227 18851 18853 17644 18226 18850 18852 17643 18225\n",
-        " 18849 19536 18224 18848 19535 19537 18223 18847 19534 20266 18222 18846\n",
-        " 19533 20257 20267 18845 19532 20256 21052 18844 19524 19526 20259 18833\n",
-        " 19523 19525 20258 18832 18839 18843 19529 18211 18838 18842 19528 18210\n",
-        " 18218 18841 19527 17634 18217 18840 17633 18216 18827 17632 18215]\n",
         "cagecnt:7"
        ]
       },
@@ -289,26 +173,19 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "[21041 21042 21043 21911 21044 21912 21915 21059 21913 22825 21914 22823\n",
-        " 21060 21929 22824 22826 21917 22829 21055 21924 22827 23806 23808 21916\n",
-        " 22828 23809 21056 21925 22835 23807 23811 23812 21919 22831 23810 23814\n",
-        " 21057 21926 22836 24847 24848 23820 22830 23813 24851 24850 22837 23824\n",
-        " 24849 24853 22839 23821 23816 24852 24855 23822 24859 25878 22844 24854\n",
-        " 25879 23823 23826 24861 25881 22842 24857 25880 22848 23825 24860 24863\n",
-        " 24856 25882 25883 22846 22849 23828 24862 24858 25884 24866 21944 22847\n",
-        " 23827 23832 24811 25845 25885 24864 21945 22850 23829 23830 23819 24810\n",
-        " 25844 25886 24865 21943 22851 22854 23771 24809 25847 24869 25888 21946\n",
-        " 22852 23770 23773 24813 25846 25887 21947 25848 26848 26847]\n",
-        "cagecnt:8\n",
-        "[22812 22819 22820 23794 22817 23799 23793 23802 22818 23800 23804 23803\n",
-        " 24836 23797 23801 24838 24841 24842 24835 24845 24837 24839 24844 24843\n",
-        " 24846 25870 25872 24840 25873 25875 25869 25871 25835 25874 25877 25862\n",
-        " 25868 26872 25836 26838 26873 24832 25867 26870 26871 24831 25866 26869\n",
-        " 25865 26868 27846]\n"
+        "cagecnt:8\n"
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -423,6 +300,122 @@
       }
      ],
      "prompt_number": 69
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sortedcages=np.zeros([100,data['nv'].shape[0]],dtype=bool)\n",
+      "cagesleft=cages\n",
+      "cagecnt=0\n",
+      "while (len(cagesleft)>0):    \n",
+      "    cage1=np.array([cagesleft[0]])\n",
+      "    clen=1\n",
+      "    cnt=0\n",
+      "    while (cnt<clen):\n",
+      "        #print cage1\n",
+      "        v=data['nbe'][cage1[cnt],:]\n",
+      "        cage1=np.append(cage1,cagesleft[np.vectorize(lambda x: x in v)(cagesleft)])\n",
+      "        idx=np.unique(cage1,return_index=True)[1]\n",
+      "        #print idx\n",
+      "        cage1=cage1[np.sort(idx)]\n",
+      "        cnt+=1\n",
+      "        clen=cage1.shape[0]    \n",
+      "        #print 'cnt:'+ (\"%d\"%cnt)\n",
+      "        #print clen\n",
+      "\n",
+      "    print 'cagecnt:' +(\"%d\"%cagecnt)\n",
+      "    #print cage1  \n",
+      "    sortedcages[cagecnt,cage1]=True\n",
+      "    cagecnt+=1\n",
+      "    #print np.vectorize(lambda x: x in cage1)(cagesleft)\n",
+      "    cagesleft=np.delete(cagesleft,np.flatnonzero(np.vectorize(lambda x: x in cage1)(cagesleft)))\n",
+      "    \n",
+      "sortedcages=sortedcages[0:cagecnt,:]\n",
+      "    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "cagecnt:0\n",
+        "cagecnt:1"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "cagecnt:2"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "cagecnt:3"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "cagecnt:4"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "cagecnt:5"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "cagecnt:6\n",
+        "cagecnt:7"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "cagecnt:8\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sortedcages.shape[0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "9"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
